refactor: remove every Java 12+ language feature
Step 1 of the Bukkit port. A 1.13 server runs Java 8, and a Java 17 JAR on a
Java 8 JVM does not fail gracefully -- it is UnsupportedClassVersionError at load,
so the plugin never starts. The bytecode target has to come down, and the language
features go first because they are the mechanical half.

Converts all ten records to final classes with final fields and record-style
accessors: Health, Response, KickData, ReleaseInfo, SemVer, Result, ListEdit,
LeafPos, Snapshot and Rule. None relied on the generated equals/hashCode -- checked
before starting, since silently losing those would have been the one change here
that breaks behaviour rather than compilation.

Filters.Snapshot is the one that mattered. Immutability was free from the record
and is now maintained by hand, so it is spelled out in the class Javadoc: `current`
is swapped in one volatile write, and a reader observing a half-updated Snapshot
could filter against a mix of the old config and the new. A non-final field added
there reintroduces exactly that, silently.

Also converts 8 pattern-matching instanceof, 3 switch arrows, 2 var, and two
Stream.toList() calls -- the last of which the feature scan missed entirely, since
it reads as an ordinary method rather than syntax. Found by compiling rather than
grepping, which is the lesson worth keeping for the remaining steps.

Compiles clean at release=11 and the full suite passes at 17, so this changes no
behaviour. Java 8 still needs the APIs handled -- java.net.http, isBlank, strip,
List.of, readString -- which is step 2.